--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
+  "description": "Eat a burger app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/midstreamer/burger.git"
   },
-  "author": "",
+  "author": "Chad Alessi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/midstreamer/burger/issues"
